# GenAIND-Project-NASA-Mission-Intelligence-Starter

./: .dockerignore  .env  .env.backup  .env.high  .env.profile.balanced  .env.small  .gitignore  Dockerfile  README.md  api_server.py  chat.py  embedding_pipeline.py  env_utils.py  evaluation_worker.py  evidently_monitor.py  ingest_missing_missions.py  judge_worker.py  llm_client.py  observability.py  openai_config.py  phoenix_annotations.py  promptfoo-redteam.local.yaml  promptfooconfig.yaml  pyproject.toml  rag_client.py  ragas_evaluator.py  setup_embeddings.py  test_questions.json  tracing.py
benchmarks/: benchmark_context_compression.py  benchmark_embedding_fast_upsert.py  benchmark_hybrid_retrieval.py
doc/: HYBRID_RETRIEVAL_TUNING.md  balanced-production-profile.md  batch-evaluation-results.md  context-compression-benchmark.md  context-compression-cli-flags.md  data-requirements.md  env-variable-reference.md  evidently-central-sink-prometheus-metrics.md  evidently-monitor-dashboard.md  integration-testing.md  judge-api-contract.md  k8s-broker-backed-eval-judge-workers.md  k8s-evaluation-worker-setup.md  kubernetes-custom-metrics-automated-setup.md  kubernetes-custom-metrics-fast-failure-checklist.md  kubernetes-custom-metrics-user-manual.md  latency-sli-usage.md  monitoring-postgres-rollup-production-tuning.md  monitoring-read-latency-benchmark.md  security-observability.md  worker-pool-scaling-dashboard.md
env/: .env.backup  .env.high  .env.profile.balanced  .env.small
infra/: __init__.py  async_reliability_metrics.py  redis_cache.py  redis_client.py  redis_evaluation_broker.py  redis_job_store.py  redis_judge_broker.py
monitoring/: __init__.py  batch_eval_report.json  latency_sli_dashboard.json  security_dashboard.py  security_event_sink.py  stage_sli_events.py  worker_pool_events.jsonl  worker_pool_events.py  worker_pool_scaling_dashboard.json
multi_agent/: __init__.py  context_compression.py  models.py  retrieval_depth.py  workers.py  workflow.py
promptfoo/: blueTeam.yaml  redteam.yaml
scripts/: benchmark_monitoring_read_latency.py  check-evidently-dashboard-readiness.sh  import-grafana-evidently-dashboard.sh  import-grafana-security-alert-rules.sh  import-grafana-security-dashboard.sh  import-grafana-stage-latency-dashboard.sh  import-grafana-worker-pool-dashboard.sh  provision-grafana-security-assets.sh  rebuild-k8s-image-and-restart.sh  run-grafana-imports.sh  run_batch_evaluation.py  setup-k8s-custom-metrics.sh  (+6 more)
(+55 files in other folders)
